[package]
name = "tokenizers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bimap = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "4.5.38", features = ["derive"] }
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.17.11"
itertools = "0.14.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tikv-jemallocator = {version = "0.5", features = ["disable_initial_exec_tls"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "tokenizers"

[workspace]
resolver = "2"
members = ["py"]

[profile.release]
debug = true
